# chatpack

./: .gitignore  Cargo.toml  README.md  STRESS_TEST.md
.github/workflows/: bench.yml  ci.yml  coverage.yml  release.yml
benches/: parsing.rs
benchmarks/discord_parsing/100/base/: estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/100/change/: estimates.json
benchmarks/discord_parsing/100/current/: estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/100/main/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/100/new/: estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/1000/base/: estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/1000/change/: estimates.json
benchmarks/discord_parsing/1000/current/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/1000/main/: estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/1000/new/: estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/10000/base/: estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/10000/change/: estimates.json
benchmarks/discord_parsing/10000/current/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/10000/main/: estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/10000/new/: estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/50000/base/: estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/50000/change/: estimates.json
benchmarks/discord_parsing/50000/current/: estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/50000/main/: estimates.json  sample.json  tukey.json
benchmarks/discord_parsing/50000/new/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/100/base/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/100/change/: estimates.json
benchmarks/filter_by_date/100/current/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/100/main/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/100/new/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/1000/base/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/1000/change/: estimates.json
benchmarks/filter_by_date/1000/current/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/1000/main/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/1000/new/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/10000/base/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/10000/change/: estimates.json
benchmarks/filter_by_date/10000/current/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/10000/main/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/10000/new/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/100000/base/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/100000/change/: estimates.json
benchmarks/filter_by_date/100000/current/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/100000/main/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_date/100000/new/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/100/base/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/100/change/: estimates.json
benchmarks/filter_by_sender/100/current/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/100/main/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/100/new/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/1000/base/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/1000/change/: estimates.json
benchmarks/filter_by_sender/1000/current/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/1000/main/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/1000/new/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/10000/base/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/10000/change/: estimates.json
benchmarks/filter_by_sender/10000/current/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/10000/main/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/10000/new/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/100000/base/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/100000/change/: estimates.json
benchmarks/filter_by_sender/100000/current/: estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/100000/main/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/filter_by_sender/100000/new/: estimates.json  sample.json  tukey.json
benchmarks/full_pipeline/1000/base/: estimates.json  sample.json  tukey.json
benchmarks/full_pipeline/1000/change/: estimates.json
benchmarks/full_pipeline/1000/current/: benchmark.json  (+3 more)
docs/: BENCHMARKS.md  CODE_REVIEW.md  EXPORT_GUIDE.md  STRESS_TEST.md  USAGE.md
examples/: library_usage.rs  rag_integration.rs
src/: cli.rs  config.rs  error.rs  format.rs  lib.rs  main.rs  message.rs  parser.rs  progress.rs
src/async_parser/: mod.rs  telegram.rs
src/core/: filter.rs  mod.rs  models.rs  processor.rs
src/core/output/: csv_writer.rs  json_writer.rs  jsonl_writer.rs  mod.rs
src/examples/: library_usage.rs  rag_integration.rs
src/parsers/: discord.rs  instagram.rs  mod.rs  telegram.rs  whatsapp.rs
src/parsing/: discord.rs  instagram.rs  mod.rs  telegram.rs  whatsapp.rs
src/streaming/: discord.rs  error.rs  instagram.rs  json_array.rs  mod.rs  telegram.rs  traits.rs  whatsapp.rs
tests/: cli_e2e.rs  cli_tests.rs  edge_cases.rs  integration.rs  output_tests.rs  proptest.rs  streaming_tests.rs
(+595 files in other folders)
