[package]
name = "chatpack"
version = "0.2.5"
edition = "2024"
description = "Compress chat exports from Telegram, WhatsApp, and Instagram into token-efficient CSV for LLMs"
authors = ["Mukhammedali Berektassuly <mukhammedali@berektassuly.com>"]
license = "MIT"
repository = "https://github.com/berektassuly/chatpack"
homepage = "https://berektassuly.com"
readme = "README.md"
keywords = ["telegram", "whatsapp", "instagram", "llm", "csv"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rand = "0.8"

[lib]
name = "chatpack"
path = "src/lib.rs"

[[bin]]
name = "chatpack"
path = "src/main.rs"

[[bin]]
name = "gen_test"
path = "src/bin/gen_test.rs"

[profile.release]
opt-level = 3
lto = true
strip = true

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-clippy", "run-cargo-test"] }
tempfile = "3.10"
proptest = "1.4"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

struct_excessive_bools = "allow"

missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"

cast_precision_loss = "allow"
cast_possible_wrap = "allow"

must_use_candidate = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
unreadable_literal = "allow"
unicode_not_nfc = "allow"
map_unwrap_or = "allow"
format_push_string = "allow"
trivially_copy_pass_by_ref = "allow"
match_same_arms = "allow"
uninlined_format_args = "allow"
collapsible_if = "allow"
unnecessary_join = "allow"
redundant_closure_for_method_calls = "allow"